# gitrack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: auto_merge.yml  build.yml  release.yml  release.yml.back  release.yml.old2  test.yml
src/: cli.rs  git_ops.rs  main.rs  test.rs  utils.rs
