[package]
name = "gitrack"
version = "2.0.0"
edition = "2021"
authors = ["containerscrew info@containerscrew.com"]
repository = "https://github.com/containerscrew/gitrack"
rust-version = "1.80.1"
license-file = "LICENSE"
description = "Scan local git repositories"


[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
colored = "2.1.0"
git2 = "0.20.0"
walkdir = "2.5.0"
home = "0.5.9"
openssl = { version = "0.10.70", features = ["vendored"] }
threadpool = "1.8.1"

# Pending to add benchmark
#[dev-dependencies]
#criterion = "0.4"
